--- a/files/Welcome.html
+++ b/files/Welcome.html
@@ -9,7 +9,7 @@
     <meta name="iWeb-Build" content="local-build-20150429" />
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <meta name="viewport" content="width=700" />
-    <title>Picture Story</title>
+    <title>Anju</title>
     <link rel="stylesheet" type="text/css" media="screen,print" href="Welcome_files/Welcome.css" />
     <!--[if lt IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Welcome_files/WelcomeIE.css'/><![endif]-->
     <!--[if gte IE 8]><link rel='stylesheet' type='text/css' media='screen,print' href='Media/IE8.css'/><![endif]-->
@@ -31,9 +31,9 @@
             
 
 
-            <div style="height: 41px; width: 625px;  height: 38px; left: 20px; position: absolute; top: 35px; width: 625px; z-index: 1; " class="tinyText style_SkipStrokeSkipFillSkipOpacity">
+            <div style="height: 41px; width: 626px;  height: 38px; left: 20px; position: absolute; top: 35px; width: 625px; z-index: 1; " class="tinyText style_SkipStrokeSkipFillSkipOpacity">
               <div style="position: relative; width: 625px; ">
-                <img src="Welcome_files/shapeimage_1.png" alt="" style="height: 35px; left: 0px; margin-top: 6px; position: absolute; top: 0px; width: 181px; " />
+                <img src="Welcome_files/shapeimage_1.png" alt="" style="height: 35px; left: 0px; margin-left: -1px; margin-top: 6px; position: absolute; top: 0px; width: 67px; " />
               </div>
             </div>
           </div>
